# restaurant-service

./: .gitignore  README.md  agents.md  package-lock.json  package.json
apps/api/: .dockerignore  .env.example  .env.production.example  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_qr_guest_ordering.py  0003_role_surface_refinement.py
apps/api/app/: main.py  seed_demo.py
apps/api/app/api/: router.py
apps/api/app/api/routes/: admin.py  auth.py  billing.py  kitchen.py  platform.py  public.py  staff.py  waiter.py
apps/api/app/core/: config.py  security.py
apps/api/app/db/: base.py  seed.py  session.py
apps/api/app/models/: __init__.py  entities.py
apps/api/app/schemas/: admin.py  auth.py  billing.py  common.py  kitchen.py  platform.py  public.py  staff.py  waiter.py
apps/api/app/services/: audit.py  auth.py  billing.py  media.py  orders.py  tenants.py
apps/api/app/tasks/: analytics.py  worker.py
apps/api/restaurant_menu_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/tests/: test_billing_rules.py  test_order_rules.py
apps/web/: .env.example  .env.production.example  Dockerfile  next.config.mjs  package-lock.json  package.json
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  layout.tsx  manifest.ts  page.tsx
apps/web/src/components/: billing-actions.tsx  decorative-backdrop.tsx  device-registry.tsx  kitchen-board.tsx  language-switcher.tsx  locale-provider.tsx  menu-studio.tsx  public-ordering.tsx  (+7 more)
infra/: docker-compose.prod.yml  docker-compose.yml
(+26 files in other folders)
